sequelize integration user and token models validation of schemas

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,15 @@
 # Port number
 PORT=3000
 
-# URL of the Mongo DB
-MONGODB_URL=mongodb://127.0.0.1:27017/databasename
+
+# Configuration of Database
+DB_NAME=dbname
+DB_USER=dbusername
+DB_PASS=dbpassword
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DIALECT=mariadb
+DB_LOGS=false
 
 # JWT
 # JWT secret key
