isEmailTaken hook created

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,8 @@ DB_USER=dbusername
 DB_PASS=dbpassword
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DIALECT=mariadb
+# Use mysql as the dialect as mariadb doesn't support db:create, db:drop and more.
+DB_DIALECT=mysql
 DB_LOGS=false
 
 # JWT
