get all users tests folder removed

--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ DB_USER=dbusername
 DB_PASS=dbpassword
 DB_HOST=127.0.0.1
 DB_PORT=3306
-# Use mysql as the dialect as mariadb doesn't support db:create, db:drop and more.
+# Use mysql as the dialect as (mariadb dialect) doesn't support db:create, db:drop and more.
 DB_DIALECT=mysql
 DB_LOGS=false
 
