models, migrations and seeders moved into src folder .sequelizerc path have been updated database startup logic into index.js App is now ready to be scaled with MySQL and Sequelize

--- a/.env.example
+++ b/.env.example
@@ -3,14 +3,27 @@ PORT=3000
 
 
 # Configuration of Database
-DB_NAME=dbname
+# ------------- START -----------------
+
+# Development
+DB_DEV_NAME=faculty-ms-dev
+DB_DEV_USER=dbusername
+DB_DEV_PASS=dbpassword
+DB_DEV_HOST=127.0.0.1
+DB_DEV_PORT=3306
+DB_DEV_DIALECT=mysql
+DB_DEV_LOGS=true
+
+# Production
+DB_NAME=faculty-ms-prod 
 DB_USER=dbusername
 DB_PASS=dbpassword
 DB_HOST=127.0.0.1
 DB_PORT=3306
-# Use mysql as the dialect as (mariadb dialect) doesn't support db:create, db:drop and more.
 DB_DIALECT=mysql
 DB_LOGS=false
+
+# -------------- END -------------
 
 # JWT
 # JWT secret key
