--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,8 +1,8 @@
 let path = require('path');
 
 module.exports = {
-  config: path.resolve('./config', 'config.js'),
-  //   'migrations-path': path.resolve('server', 'migrations'),
-  //   'models-path': path.resolve('server', 'models'),
-  //   'seeders-path': path.resolve('server', 'seeders'),
+  config: path.resolve('./src/config/sequelize.js', 'sequelize.js'),
+  'migrations-path': path.resolve('src', 'migrations'),
+  'models-path': path.resolve('src', 'models'),
+  'seeders-path': path.resolve('src', 'seeders'),
 };
