--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,42 @@
 # Port number
-PORT=3000
+PORT=4000
 
+# Node Environment
+NODE_ENV=development
 
 # Configuration of Database
 # ------------- START -----------------
+
+# Quick Note: Since we will be using docker in this project, we have mapped the default database port 3306 to 3307 and database host address from localhost to "database". This will prevent problems if user already have a database installed and the port is occupied.
 
 # Development
 DB_DEV_NAME=faculty-ms-dev
 DB_DEV_USER=dbusername
 DB_DEV_PASS=dbpassword
-DB_DEV_HOST=127.0.0.1
-DB_DEV_PORT=3306
+DB_DEV_HOST=database
+DB_DEV_PORT=3307
 DB_DEV_DIALECT=mysql
 DB_DEV_LOGS=true
 
 # Production
-DB_NAME=faculty-ms-prod 
+DB_NAME=faculty-ms
 DB_USER=dbusername
 DB_PASS=dbpassword
-DB_HOST=127.0.0.1
-DB_PORT=3306
+DB_HOST=database
+DB_PORT=3307
 DB_DIALECT=mysql
 DB_LOGS=false
+
+# Test
+DB_NAME=faculty-ms-test 
+DB_USER=dbusername
+DB_PASS=dbpassword
+DB_HOST=database
+DB_PORT=3307
+DB_DIALECT=mysql
+DB_LOGS=false
+
+# If docker is used, the host of database @ docker-compose is to = "database"
 
 # -------------- END -------------
 
