--- a/.sequelizerc
+++ b/.sequelizerc
@@ -1,7 +1,7 @@
 let path = require('path');
 
 module.exports = {
-  config: path.resolve('./src/config/sequelize.js', 'sequelize.js'),
+  config: path.resolve('src', 'config', 'sequelize.js'),
   'migrations-path': path.resolve('src', 'migrations'),
   'models-path': path.resolve('src', 'models'),
   'seeders-path': path.resolve('src', 'seeders'),
