--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "start": "pm2 start ecosystem.config.json --no-daemon",
     "dev": "cross-env NODE_ENV=development nodemon -L src/index.js",
-    "renew_db": " npx sequelize db:drop && npx sequelize db:create",
+    "renew_db": "cross-env NODE_ENV=development npx sequelize db:drop && cross-env NODE_ENV=development npx sequelize db:create",
     "test": "jest -i --colors --verbose --detectOpenHandles",
     "test:watch": "jest -i --watchAll",
     "coverage": "jest -i --coverage",
