docker configurations fixed and ready to be pushed

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
-# Port number
-PORT=4000
+# For docker env variables, take a look at docker-compose.env
 
+# Application Port --------------------
+# Reminder: Exposing the port at dockerfile should be identical
+# with the below port address of application.
+PORT=4000
+# -------------------------------------
 
 # Configuration of Database
 # ------------- START -----------------
@@ -14,10 +18,6 @@ DB_DEV_PORT=3306
 DB_DEV_DIALECT=mysql
 DB_DEV_LOGS=false
 
-# Docker Database
-DB_DEV_DOCKER_HOST=database
-DB_DEV_DOCKER_PORT=3309
-
 # ------------------------------
 
 # Production -------------------
@@ -29,9 +29,6 @@ DB_PORT=3306
 DB_DIALECT=mysql
 DB_LOGS=false
 
-# Docker Database
-DB_DOCKER_HOST=database
-DB_DOCKER_PORT=3309
 # --------------------------------
 
 # -------------- END -------------
