--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,10 +11,12 @@ services:
       test: ['CMD', 'mysqladmin', 'ping', '-h', 'localhost', '-uroot', '-padmin']
       interval: 5s
       retries: 10
-    env_file: .env
+    ports:
+      - '3309:3309'
+    environment:
+      MYSQL_TCP_PORT: 3309
   node-api:
     build: .
-    image: faculty-ms
     ports:
       - '${PORT}:${PORT}'
     volumes:
@@ -22,11 +24,11 @@ services:
       - /app/node_modules
     networks:
       - node-network
+    env_file:
+      - docker-compose.env
     depends_on:
       database:
         condition: service_healthy
-    links:
-      - database
 volumes:
   maria-data:
     driver: local
