--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,16 +2,14 @@ version: '3.8'
 
 services:
   node-api:
+    image: faculty-ms-dev
     container_name: faculty-ms-api-dev
     command: npm run dev
-    environment:
-      - DOCKER_ENV=true
   database:
-    container_name: faculty-ms-database-dev
-    ports:
-      - '${DB_DEV_DOCKER_PORT}:${DB_DEV_DOCKER_PORT}'
+    container_name: faculty-ms-db-dev
     environment:
-      MYSQL_ROOT_PASSWORD: admin
-      MYSQL_DATABASE: faculty-ms-dev
-      MARIADB_DATABASE: faculty-ms-dev
-      MYSQL_TCP_PORT: ${DB_DEV_DOCKER_PORT}
+      MYSQL_DATABASE: ${DB_DEV_NAME}
+      MYSQL_ROOT_PASSWORD: ${DB_DEV_PASS}
+      # MYSQL_USER: ${DB_DEV_USER}
+      # MYSQL_USER: ${DB_USER} :- If the value is root, then
+      # this will cause problem as its already created @ init of db
