change-password endpoint has been moved to auth section

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "nodemon": "^2.0.0",
     "prettier": "^2.0.5",
     "sequelize-cli": "^6.6.0",
-    "supertest": "^6.0.1"
+    "supertest": "^6.0.1",
+    "swagger-autogen": "^2.23.1"
   }
 }
