--- a/src/docs/components.yml
+++ b/src/docs/components.yml
@@ -57,6 +57,15 @@ components:
           example:
             code: 400
             message: Email already taken
+    DuplicateDepartment:
+      description: department name already taken
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Error'
+          example:
+            code: 400
+            message: Department name already taken
     Unauthorized:
       description: Unauthorized
       content:
